--- a/main.css
+++ b/main.css
@@ -78,6 +78,15 @@ nav ul {
 	margin: 0;
 	padding: 0 10px;
 }
+.headshot {
+	border-radius: 50%;
+	height: 30%;
+	width: 10%;
+	display: flex;
+	margin-right: auto;
+	margin-left: auto;
+	padding-top: 10px;
+}
 
 .contact-btn {
 	float: right;
