--- a/main.css
+++ b/main.css
@@ -21,7 +21,8 @@ a {
 
 .page-title {
 	text-align: center;
-  	font-weight: 100;
+	  font-weight: 100;
+	  font-size: 54px;
 }
 
 .page-description {
@@ -29,21 +30,6 @@ a {
   	margin: 2px;
   	text-align: center;
   	padding: 30px;
-}
-
-.gallery {
-	margin-top: 20px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-}
-  
-.gallery-item {
-	margin: 20px;
-}
-  
-.gallery-item .thumbnail {
-	border: 5px solid #fff;
 }
 
 nav {
@@ -64,9 +50,9 @@ nav ul {
 }
 
 .social-media-links {
-	float: right;
-	position: relative;
-	margin-right: 30px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .social-media-links ul {
@@ -80,28 +66,12 @@ nav ul {
 }
 .headshot {
 	border-radius: 50%;
-	height: 30%;
+	height: 10%;
 	width: 10%;
 	display: flex;
 	margin-right: auto;
 	margin-left: auto;
 	padding-top: 10px;
-}
-
-.contact-btn {
-	float: right;
-}
-  
-.contact-btn a {
-	cursor: pointer;
-	margin-right: 30px;
-	padding: 8px 18px;
-	border: 1px solid #204156;
-	position: relative;
-}
-  
-.contact-btn a:active {
-	top: 2px;
 }
 
 nav a {
