--- a/main.css
+++ b/main.css
@@ -48,7 +48,14 @@ a {
 }
 
 .projects {
-	padding-top: 100px;
+	padding-top: 70px;
+}
+
+.project-title2 {
+	margin: 2px;
+	font-size: 24px;
+	padding-left: 150px;
+	padding-bottom: 50px;
 }
 
 .project-title {
